--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,10 +1,10 @@
-project_name: docker_tag
+project_name: acr_tag
 before:
   hooks:
     - go mod download
 builds:
   - main: .
-    binary: docker_tag
+    binary: acr_tag
     env:
       - CGO_ENABLED=0
     goos:
@@ -14,7 +14,7 @@ builds:
       - amd64
 archives:
   - format_overrides:
-      name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
+    name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
 checksum:
   name_template: "checksums.txt"
 changelog:
