--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,7 +13,7 @@ builds:
     goarch:
       - amd64
     ldflags:
-      - -s -w -X "tag.GitRelease={{.Version}}"
+      - -X "tag.GitRelease={{ .Tag }}"
 archives:
   - format_overrides:
     name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
