--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,7 +13,7 @@ builds:
     goarch:
       - amd64
     ldflags:
-      - -X "tag.GitRelease={{ .Tag }}"
+      - -s -w -X tag.app_version={{.Version}} -X tag.commit={{.Commit}} -X tag.date={{.Date}} -X tag.builtBy=goreleaser`.
 archives:
   - format_overrides:
     name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
