--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,10 +13,10 @@ builds:
     goarch:
       - amd64
     ldflags:
-      - -s -w -X "tag.app_version={{.Version}}"
-      - -s -w -X "tag.commit={{.ShortCommit}}"
-      - -s -w -X "tag.date={{.CommitDate}}"
-      - -s -w -X "tag.builtBy=goreleaser"
+      - -s -w -X "github.com/blakyaks/acr-tag/tag.app_version={{.Version}}"
+      - -s -w -X "github.com/blakyaks/acr-tag/tag.commit={{.ShortCommit}}"
+      - -s -w -X "github.com/blakyaks/acr-tag/tag.date={{.CommitDate}}"
+      - -s -w -X "github.com/blakyaks/acr-tag/tag.builtBy=goreleaser"
 archives:
   - format_overrides:
     name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
