--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,9 +13,9 @@ builds:
     goarch:
       - amd64
     ldflags:
-      - -s -w -X "github.com/carbonplace/acr-tag/tag.app_version={{.Version}}"
-      - -s -w -X "github.com/carbonplace/acr-tag/tag.commit={{.ShortCommit}}"
-      - -s -w -X "github.com/carbonplace/acr-tag/tag.date={{.CommitDate}}"
+      - -s -w -X "github.com/appnetwise/acr-tag.app_version={{.Version}}"
+      - -s -w -X "github.com/appnetwise/acr-tag.commit={{.ShortCommit}}"
+      - -s -w -X "github.com/appnetwise/acr-tag.date={{.CommitDate}}"
 archives:
   - format_overrides:
     name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
